tests/compile-fail/integration__integration__general__unknown_variable.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unknown ANM register or variable 'y'
   ┌─ <input>:28:17
   │
28 │         int x = y;
   │                 ^ not found in this scope


